syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.common";

package com.glance.spaces.common;

message TimeZone {
  string display_name = 1;
  uint32 raw_offset = 2;
  string id = 3;
  uint32 dstsavings = 4;
}